--- a/app/globals.css
+++ b/app/globals.css
@@ -71,16 +71,18 @@
 
 @layer utilities {
   :root {
-    --foreground-rgb: 0, 0, 0;
+    --default-foreground-rgb: var(--color-off-white);
     --background-start-rgb: 214, 219, 220;
     --background-end-rgb: 255, 255, 255;
+    --default-text-color: var(--color-off-black);
   }
 
   @media (prefers-color-scheme: dark) {
     :root {
-      --foreground-rgb: 255, 255, 255;
+      --default-foreground-rgb: var(--color-off-black);
       --background-start-rgb: 0, 0, 0;
       --background-end-rgb: 0, 0, 0;
+      --default-text-color: var(--color-off-white);
     }
   }
   @font-face {
@@ -102,13 +104,17 @@
     font-style: normal;
   }
 
+  h1 {
+    font-size: var(--text-8xl);
+    font-family: var(--font-monomaniac-one);
+  }
+  h2 {
+    font-size: var(--text-lg);
+    font-family: var(--font-andale-mono);
+  }
+
   body {
-    color: rgb(var(--foreground-rgb));
-    background: linear-gradient(
-        to bottom,
-        transparent,
-        rgb(var(--background-end-rgb))
-      )
-      rgb(var(--background-start-rgb));
+    color: rgb(var(--default-text-color));
+    background-color: rgb(var(--default-foreground-rgb));
   }
 }
