--- a/app/globals.css
+++ b/app/globals.css
@@ -133,4 +133,8 @@
     color: rgb(var(--default-text-color));
     background-color: rgb(var(--default-foreground-rgb));
   }
+  p {
+    font-size: var(--text-base);
+    font-family: var(--font-andale-mono);
+  }
 }
