--- a/app/globals.css
+++ b/app/globals.css
@@ -158,4 +158,8 @@
     font-size: var(--text-base);
     font-family: var(--font-andale-mono);
   }
+  strong {
+    font-weight: 900;
+    text-decoration: underline;
+  }
 }
