Refactor ExperiencePage: update testimonial structure and improve styling for better readability

--- a/app/globals.css
+++ b/app/globals.css
@@ -158,6 +158,10 @@
     font-size: var(--text-base);
     font-family: var(--font-andale-mono);
   }
+  span {
+    font-size: var(--text-base);
+    font-family: var(--font-andale-mono);
+  }
   strong {
     font-weight: 900;
     text-decoration: underline;
