--- a/app/globals.css
+++ b/app/globals.css
@@ -162,6 +162,29 @@
     font-size: var(--text-2xl);
     font-family: var(--font-andale-mono);
   }
+
+  @media screen and (max-width: 640px) {
+    h1 {
+      font-size: var(--text-4xl);
+    }
+    h2 {
+      font-size: var(--text-3xl);
+    }
+    h3 {
+      font-size: var(--text-2xl);
+    }
+    h4 {
+      font-size: var(--text-xl);
+    }
+    h5 {
+      font-size: var(--text-lg);
+    }
+    p {
+      font-size: "0.5rem";
+      font-family: var(--font-andale-mono);
+    }
+    
+  }
   header {
     color: rgb(var(--default-text-color));
     background-color: rgb(var(--default-foreground-rgb));
