--- a/app/globals.css
+++ b/app/globals.css
@@ -213,12 +213,14 @@
 
 @layer components {
   .page {
+    scroll-snap-align: start;
     padding-block: calc(var(--spacing) * 20);
     margin-top: calc(var(--spacing) * 10);
   }
 
   @media screen and (max-width: 640px) {
     .page {
+      scroll-snap-align: start;
       padding-left: calc(var(--spacing) * 5);
       padding-right: calc(var(--spacing) * 10);
       margin-left: calc(var(--spacing) * 10);
