--- a/app/globals.css
+++ b/app/globals.css
@@ -215,7 +215,7 @@
   .page {
     padding-block: calc(var(--spacing) * 20);
     padding-top: calc(var(--spacing) * 10);
-    height: 100vh;
+    /* height: 100vh; */
   }
 
   @media screen and (max-width: 640px) {
