Enhance layout styles for improved responsiveness and adjust footer positioning

--- a/app/globals.css
+++ b/app/globals.css
@@ -215,12 +215,12 @@
   .page {
     padding-block: calc(var(--spacing) * 20);
     padding-top: calc(var(--spacing) * 10);
-    /* height: 100vh; */
+    height: 100vh;
   }
 
   @media screen and (max-width: 640px) {
     .page {
-      padding-left: calc(var(--spacing) * 5);
+      padding-left: calc(var(--spacing) * 10);
       padding-right: calc(var(--spacing) * 10);
       padding-top: calc(var(--spacing) * 50);
 
