Improve layout responsiveness and adjust padding for mobile views

--- a/app/globals.css
+++ b/app/globals.css
@@ -219,6 +219,7 @@
 
   @media screen and (max-width: 640px) {
     .page {
+      padding-left: calc(var(--spacing) * 8);
       padding-block: calc(var(--spacing) * 10);
       padding-top: calc(var(--spacing) * 15);
       height: 100vh;
