--- a/app/globals.css
+++ b/app/globals.css
@@ -230,6 +230,7 @@
     margin-left: calc(var(--spacing) * 10);
     margin-right: calc(var(--spacing) * 10);
     padding-top: calc(var(--spacing) * 15);
+    padding-bottom: calc(var(--spacing) * 15);
     height: 100vh;
   }
 
