--- a/app/globals.css
+++ b/app/globals.css
@@ -185,6 +185,17 @@
       font-size: "0.5rem";
       font-family: var(--font-andale-mono);
     }
+    html,
+    body {
+      overflow: hidden;
+    }
+    main {
+      height: 100dvh;
+      overflow-y: auto;
+      scroll-snap-type: y mandatory;
+      border: 1px solid red;
+      scroll-padding-top: calc(var(--spacing) * 15)
+    }
   }
 
   header {
@@ -233,9 +244,10 @@
 
   @media screen and (max-width: 640px) {
     .page {
+      position: relative;
+      scroll-snap-align: start;
       margin-left: calc(var(--spacing) * 8);
       margin-right: calc(var(--spacing) * 8);
-      padding-top: calc(var(--spacing) * 15);
       height: 100%;
       min-height: 100vh;
     }
