--- a/app/globals.css
+++ b/app/globals.css
@@ -114,7 +114,7 @@
     --background-end-rgb: 255, 255, 255;
     --default-text-color: var(--color-off-black);
     scrollbar-width: thin;
-    --color-highlight: var(--color-primary-dark)
+    --color-highlight: var(--color-primary-dark);
   }
 
   [color-scheme="dark"] {
@@ -124,7 +124,7 @@
       --background-end-rgb: 0, 0, 0;
       --default-text-color: var(--color-off-white);
       scrollbar-width: thin;
-      --color-highlight: var(--color-primary-light)
+      --color-highlight: var(--color-primary-light);
     }
   }
   @font-face {
@@ -187,16 +187,6 @@
       font-size: "0.5rem";
       font-family: var(--font-andale-mono);
     }
-    html,
-    body {
-      overflow: hidden;
-    }
-    main {
-      height: 100dvh;
-      overflow-y: auto;
-      scroll-snap-type: y mandatory;
-      scroll-padding-top: calc(var(--spacing) * 15)
-    }
   }
 
   header {
@@ -219,16 +209,26 @@
     font-weight: 900;
     color: var(--color-highlight);
   }
+  
   body[data-scroll-locked] {
     margin-right: 0 !important;
   }
-
   .expand {
     transition: transform 0.5s;
   }
-
   .expand:hover {
     transform: scale(1.1);
+  }
+  html,
+  body {
+    overflow: hidden;
+  }
+  main {
+    height: 100vh;
+    overflow-y: auto;
+    scroll-snap-type: y mandatory;
+    /* scroll-padding-top: calc(var(--spacing) * 15); */
+    scroll-behavior: smooth;
   }
 }
 
@@ -241,6 +241,7 @@
     padding-top: calc(var(--spacing) * 15);
     padding-bottom: calc(var(--spacing) * 15);
     height: 100vh;
+    border: 1px solid var(--color-primary);
   }
 
   @media screen and (max-width: 640px) {
